# duno-slide

./: .gitignore  README.md  example.toml  pyproject.toml
.github/workflows/: pipeline.yaml
src/duno_slide/: __init__.py  cli.py  exporter.py  layout.py  loader.py  sample.toml  server.py
src/duno_slide/templates/static/: styles.css
src/duno_slide/themes/: hookspecs.py  manager.py
src/duno_slide/themes/dunossauro/: __init__.py
src/duno_slide/themes/dunossauro/templates/: base.html
src/duno_slide/themes/dunossauro/templates/slides/: default.html  summary.html
src/duno_slide/themes/dunossauro/templates/static/: styles.css
src/fast_slide/: __init__.py  cli.py  exporter.py  layout.py  loader.py  server.py
src/fast_slide/templates/: base.html
src/fast_slide/templates/slides/: cover_title_left.html  cover_title_right.html  default.html  summary.html
src/fast_slide/templates/static/: styles.css
