[project]
name = "duno-slide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mario Taddeucci", email = "mariotaddeucci@gmx.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.10.1",
    "pydantic>=2.12.5",
    "typer>=0.15.0",
]

[project.optional-dependencies]
export = [
    "playwright>=1.40.0",
]

[project.scripts]
duno-slide = "duno_slide:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.51.2",
    "ruff>=0.15.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
fix = "ruff check . --fix && ruff format ."
lint = "ruff check . && ruff format . --check && pyrefly check ."
