[project]
name = "duno-slide"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mario Taddeucci", email = "mariotaddeucci@gmx.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.10.1",
    "pluggy>=1.6.0",
    "pydantic>=2.12.5",
    "typer>=0.15.0",
]

[project.optional-dependencies]
export = [
    "playwright>=1.40.0",
]

[project.scripts]
duno-slide = "duno_slide:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/duno_slide/_version.py"

[dependency-groups]
dev = [
    "pyrefly>=0.51.2",
    "ruff>=0.15.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
fix = "ruff check . --fix && ruff format ."
lint = "ruff check . && ruff format . --check && pyrefly check ."
